# Clackertron

./: README.md
docs/: ASM+uCode.xlsx  relay_count.xlsx
simulation/Falstad/: 2bit-ADD-SUB  ALU+ADD_raw+bus  Adder-raw  Amplifier  Double-D-Latch  Full_Adder  Half_Adder  Incrementer_Logic  Register  self-writing-D-Latch-circuit
simulation/LogiSim/: Clackertron_sync.circ  Demo_Full_Adder_Logic.circ  Relay_async.circ  Relay_sync.circ
src/Falstad/: README.md  demo-rising-edge-enable  demo-self-writing-D-Latch-circuit  module-Adder-8bit  module-D-Latch  module-Full-Adder-Carry-Lookahead
src/LogiSim/: Clackertron_sync.circ  README.md  Relay_sync.circ
src/LogiSim/deprecated/: Clackertron - old copy.circ  Clackertron.circ
src/SystemC/: CMakeLists.txt  clackertron.cpp
src/SystemC/relay_logic/: CMakeLists.txt  hysteresis.cpp  hysteresis.h  relay.h  simtypes.h
src/SystemC/test/: CMakeLists.txt
src/SystemC/test/hysteresis/: CMakeLists.txt  tst_hyst_common.h  tst_hysteresis.cpp
